RESOLVED FIXED11935
REGRESSION: Changing the overflow style dynamically does not force repaint
https://bugs.webkit.org/show_bug.cgi?id=11935
Summary REGRESSION: Changing the overflow style dynamically does not force repaint
Sam Weinig
Reported 2006-12-22 13:11:03 PST
Changing the overflow style dynamically does not force repaint, you have to scroll a little to see the change. This is a regression from shipping Safari.
Attachments
Erase current overflow (10.51 KB, patch)
2007-01-07 03:32 PST, mitz
hyatt: review+
mitz
Comment 1 2007-01-07 03:32:42 PST
Created attachment 12275 [details] Erase current overflow
Dave Hyatt
Comment 2 2007-01-07 03:38:04 PST
Comment on attachment 12275 [details] Erase current overflow r=me
Alexey Proskuryakov
Comment 3 2007-01-07 03:51:31 PST
Committed revision 18647.
Note You need to log in before you can comment on or make changes to this bug.