2007-01-07  Mitz Pettel  <mitz@webkit.org>

Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11935
          REGRESSION: Changing the overflow style dynamically does not force repaint

        Test: fast/repaint/erase-overflow.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::setStyle): Added a repaint before changing hasOverflowClip
        to true, to ensure that the current overflow is erased.



Canonical link: https://commits.webkit.org/15668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18647 268f45cc-cd09-0410-ab3c-d52691b4dbfc